# Interceptor

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
examples/: hello_there.c  hello_there_thread.c
includes/: common.h  elfscan.h  errorcodes.h  interceptor.h  memory.h  my_include.h  thread_helper.h
src/: Interceptor.c  breakpoint.c  elfscan.c  hello_there.c  indirectcall.c  interceptor.c  memory.c  trampoline.c  utility.c
src/challenge1/: breakpoint.c
src/challenge2/: indirectcall.c
src/challenge3/: memcache.c
src/challenge4/: trampoline.c
src/challenge5/: interceptor_thread.c  thread_helper.c
